--- a/styles.scss
+++ b/styles.scss
@@ -34,15 +34,19 @@ nav {
   column-gap: $gap;
   margin-top: 10px;
 
+  @media (min-width: 1400px) {
+    grid-template-columns: 3fr repeat(7, 1fr) 3fr;
+  }
+
   p {
-    grid-column: 3/5;
+    grid-column: 2/5;
     text-transform: uppercase;
     font-size: 1.5rem;
   }
 
   ul {
     display: flex;
-    grid-column-end: 7;
+    grid-column: 6/9;
     
     li {
       list-style-type: none;
@@ -61,15 +65,10 @@ nav {
         }
       }
 
-      &::after {
-        content: '*';
-        padding-left: 25px;
-      }
-
-      &:last-child {
-        &::after {
-          content: '';
-          padding-left: 0;
+      &:nth-child(2) {
+        &::before, &::after {
+          content: '*';
+          padding: 0 25px;
         }
       }
     }
@@ -83,37 +82,31 @@ main {
   grid-gap: $gap;
   font-family: $lato;
 
+  @media (min-width: 1400px) {
+    grid-template-columns: 3fr repeat(7, 1fr) 3fr;
+  }
+
   .top {
     grid-column: 2/6;
     border-left: 5px solid $spanish-blue;
     padding: 30px;
     position: relative;
 
-    a {
-      text-decoration: none;
-      color: $onyx;
-      transition:text-decoration 500ms ease-in-out;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-    p {
-      font-family: $monda;
-      font-size: 0.875rem;
-      font-weight: 400;
-    }
-
     h1 {
       font-size: 2.25rem;
       color: $spanish-blue;
-      padding: 30px 0;
     }
 
     h3 {
       font-weight: 400;
-      font-size: 1rem;
+      font-size: 1.5rem;
+      padding: 30px 0;
+    }
+
+    p {
+      font-family: $monda;
+      font-size: 0.75rem;
+      font-weight: 400;
     }
   }
 
@@ -140,6 +133,9 @@ main {
   font-family: $lato;
   font-weight: 400;
 
+  @media (min-width: 1400px) {
+    grid-template-columns: 3fr repeat(7, 1fr) 3fr;
+  }
   
   h2 {
     font-size: 2.25rem;
@@ -154,12 +150,20 @@ main {
     font-size: 0.8rem;
   }
 
+  img {
+    max-width:100%;
+  }
+
   .first-project {
     grid-column: 2/7;
     display: flex;
 
     .image {
       flex: 1.5;
+
+      img {
+        max-width: 100%;
+      }
     }
 
     .text-wrapper {
@@ -167,6 +171,7 @@ main {
       flex-direction: column;
       flex:1;
       position: relative;
+      margin-left: 20px;
 
       h2 {
         margin-bottom: 10px;
